fix: content now doesn't overflow the footer

--- a/recipe-book-app/src/App.css
+++ b/recipe-book-app/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f5eddc;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /*HEADER STYLES*/
@@ -20,7 +20,7 @@ header img {
 /*ORGANIZATION FOR SIDEBAR AND RECIPES (main)*/
 .content {
   display: flex;
-  height: 85vh;
+  /* height: 85vh; */
 }
 
 .recipeGrid {
@@ -104,7 +104,6 @@ header img {
   padding: 4px 10px;
 }
 
-
 /*SIDEBAR STYLES*/
 aside {
   background-color: white;
@@ -143,8 +142,7 @@ footer {
   width: 100%;
   height: 1px;
   padding: 30px 0;
-  position: fixed;
-  bottom: 0;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
